--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,11 @@ spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/ilerijava
     username: devuser
-    password: devpassword 
+    password: devpassword
     driver-class-name: org.postgresql.Driver
   jpa:
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -14,6 +16,7 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+    baselineOnMigrate: true
 
 microservices:
   user: http://localhost:8007
@@ -28,3 +31,4 @@ microservices:
 
 server:
   port: 8006
+
