--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,16 +22,19 @@ spring:
     baselineOnMigrate: true
 
 microservices:
-  user: http://localhost:8007
-  order: http://localhost:8003
-  gateway: http://localhost:8001
-  payment: http://localhost:8006
+  user: http://192.168.137.195:8007
+  order: http://192.168.137.169:8003
+  gateway: http://192.168.137.149:8001
+  payment: http://192.168.137.52:8006
   product: http://localhost:8002
-  invoice: http://localhost:8008
-  notification: http://localhost:8004
-  cart: http://localhost:8005
-  shipping: http://localhost:8011
+  invoice: http://192.168.137.140:8008
+  notification: http://192.168.137.111:8004
+  cart: http://192.168.137.244:8005
+  shipping: http://192.168.137.179:8011
 
 server:
   port: 8006
 
+springdoc:
+  api-docs:
+    path: /api-docs
